008-networking/multi-port-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-port-svc

spec:

  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000

  - name: https
    protocol: TCP
    port: 443
    targetPort: 9000
