008-networking/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport

spec: 

  type: NodePort

  ports:
  - port: 80
    targetPort: 80
    nodePort: 30100
