008-networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc

spec:

  selector:
    type: backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
