008-networking/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              number: 80
